--- a/index.html
+++ b/index.html
@@ -405,6 +405,30 @@
       </div>
     </section>
 
+    <!-- QUIÉNES SOMOS -->
+<section id="quienes-somos" class="card" aria-label="Quiénes somos" style="margin-top:24px;">
+  <h3>¿Quiénes somos?</h3>
+  <p style="margin-top:6px;">
+    Somos un grupo de amigos apasionados por los postres, la creatividad y la magia. 
+    En <strong>Sweet and Spells</strong> combinamos el arte de preparar brownies y helados 
+    con la ilusión de crear momentos únicos para todos nuestros visitantes.
+  </p>
+
+  <div style="display:flex; gap:20px; flex-wrap:wrap; align-items:center; margin-top:14px;">
+    <!-- Imagen o ilustración decorativa -->
+    <img src="https://images.unsplash.com/photo-1565958011705-44e211b17d1f?q=80&w=600&auto=format&fit=crop" 
+         alt="Equipo Sweet and Spells" 
+         style="width:240px; height:160px; object-fit:cover; border-radius:12px; box-shadow:0 8px 24px rgba(0,0,0,0.1);">
+
+    <div style="flex:1 1 300px;">
+      <p>Nuestro equipo está formado por soñadores que creen que cada postre puede contar una historia. 
+      Desde el diseño de cada sabor hasta la decoración del local, todo está pensado para hacerte sonreír.</p>
+      <p style="margin-top:8px;">Nos inspiran los colores, la diversión y la magia de compartir momentos dulces en familia. 🍦✨</p>
+    </div>
+  </div>
+</section>
+
+
     <!-- CONTACTO / REDES -->
     <section class="card" style="margin-top:20px;">
       <h3>Contáctanos y sigue la magia</h3>
@@ -424,3 +448,4 @@
   <!-- LIGHTBOX -->
   <div class="lightbox" id="lightbox" role="dialog" aria-hidden="true" onclick="closeLightbox()">
     <img id="lightbox-img" src="" alt="Imagen ampliada">
+
