--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
   <div style="display:flex; gap:20px; flex-wrap:wrap; align-items:center; margin-top:14px;">
     <!-- Imagen o ilustración decorativa -->
-    <img src="https://images.unsplash.com/photo-1565958011705-44e211b17d1f?q=80&w=600&auto=format&fit=crop" 
+    <img src="https://i.ibb.co/JWqWwpLK/logo.jpg" 
          alt="Equipo Sweet and Spells" 
          style="width:240px; height:160px; object-fit:cover; border-radius:12px; box-shadow:0 8px 24px rgba(0,0,0,0.1);">
 
@@ -448,4 +448,5 @@
   <!-- LIGHTBOX -->
   <div class="lightbox" id="lightbox" role="dialog" aria-hidden="true" onclick="closeLightbox()">
     <img id="lightbox-img" src="" alt="Imagen ampliada">
+
 
