--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
     <!-- CONTACTO / REDES -->
     <section class="card" style="margin-top:20px;">
       <h3>Contáctanos y sigue la magia</h3>
-      <p>Instagram: <a href="https://instagram.com" target="_blank">@sweetandspells</a> • TikTok: <a href="https://tiktok.com" target="_blank">@sweetandspells</a></p>
+      <p>Instagram: <a href="https://instagram.com/sweet_and_spells" target="_blank">@sweetandspells</a> • TikTok: <a href="https://www.tiktok.com/@sweet_and_spells" target="_blank">@sweetandspells</a></p>
       <p style="margin-top:8px;">Teléfono (WhatsApp): <strong>+57 300 123 4567</strong></p>
       <p style="margin-top:6px; font-size:0.9rem; color:#7b5b73;
 
@@ -448,5 +448,6 @@
   <!-- LIGHTBOX -->
   <div class="lightbox" id="lightbox" role="dialog" aria-hidden="true" onclick="closeLightbox()">
     <img id="lightbox-img" src="" alt="Imagen ampliada">
+
 
 
