--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
          style="width:240px; height:160px; object-fit:cover; border-radius:12px; box-shadow:0 8px 24px rgba(0,0,0,0.1);">
 
     <div style="flex:1 1 300px;">
-      <p>Nuestro equipo está formado por soñadores que creen que cada postre puede contar una historia. 
+      <p>Nuestro equipo está formado por Karen Bohorquez, Daniel Castillo, Mariana pabon, Melanie Zambrano, Carolina Navas. estudiantes de grado 11, jovenes soñadores que creen que cada postre puede contar una historia. 
       Desde el diseño de cada sabor hasta la decoración del local, todo está pensado para hacerte sonreír.</p>
       <p style="margin-top:8px;">Nos inspiran los colores, la diversión y la magia de compartir momentos dulces en familia. 🍦✨</p>
     </div>
@@ -448,6 +448,7 @@
   <!-- LIGHTBOX -->
   <div class="lightbox" id="lightbox" role="dialog" aria-hidden="true" onclick="closeLightbox()">
     <img id="lightbox-img" src="" alt="Imagen ampliada">
+
 
 
 
